--- a/index.html
+++ b/index.html
@@ -91,5 +91,9 @@
 <div>
   <marquee>This is a really old feature that only works in some browsers. You should never use it for a real website.</marquee>
 </div>
-                           
+
+<! -- blank -->
+<div>
+  <blank>This is a blank sentense </blank>
+</div>
                            
