--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
   <marquee>This is a really old feature that only works in some browsers. You should never use it for a real website.</marquee>
 </div>
 
-<! -- blank -->
+<! -- blink -->
 <div>
-  <blank>This is a blank sentense </blank>
+  <blink>This is a blank sentense </blink>
 </div>
                            
