--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
 
 <! -- blink -->
 <div>
-  <blink>This is a blank sentense </blink>
+  <blink>This is a blink sentense </blink>
 </div>
                            
