--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<!-- The Links -->\
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+  <title> ----THE PAGE ----</title>
+  </head>
+  <body>
+<!-- The Links -->
 <div>
 <a href="https://www.frontendmasters.com">Frontend Masters</a>
 <a href="https://www.aka.ms/Visual-Studio-code">Visual Studio Code</a>
@@ -96,4 +102,5 @@
 <div>
   <blink>This is a blink sentense </blink>
 </div>
-                           
+  </body>                   
+</html>
